--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body class="page">
   <header class="header">
-    <h1 class="header__title">Hello World!</h1>
+    <nav class="nav header__nav">
+      <div class="nav__logo">
+        <img src="images/header/logo.svg" alt="Royal-Hotel Logo">
+      </div>
+    </nav>
   </header>
   <main class="main"></main>
   <footer class="footer"></footer>
