--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </div>
             <h2 class="brand__title">Royal Hotel</h2>
           </div>
+          <div class="nav__burger"></div>
           <ul class="nav__list">
             <li class="nav__item"><a class="nav__link" href="#">About</a></li>
             <li class="nav__item"><a class="nav__link" href="#">Rooms</a></li>
